--- a/seller_module/admin-login.html
+++ b/seller_module/admin-login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seller Login - BookStore</title>
+    <title>Admin Login - BookStore</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -40,7 +40,7 @@
 
         .login-header i {
             font-size: 3rem;
-            color: #27ae60;
+            color: #e74c3c;
             margin-bottom: 1rem;
         }
 
@@ -75,7 +75,7 @@
 
         .form-group input:focus {
             outline: none;
-            border-color: #27ae60;
+            border-color: #e74c3c;
         }
 
         .remember-forgot {
@@ -93,14 +93,14 @@
         }
 
         .forgot-password {
-            color: #27ae60;
+            color: #e74c3c;
             text-decoration: none;
         }
 
         .login-button {
             width: 100%;
             padding: 1rem;
-            background: #27ae60;
+            background: #e74c3c;
             color: white;
             border: none;
             border-radius: 5px;
@@ -110,27 +110,14 @@
         }
 
         .login-button:hover {
-            background: #219a52;
-        }
-
-        .register-link {
-            text-align: center;
-            margin-top: 1.5rem;
-            font-size: 0.9rem;
-            color: #666;
-        }
-
-        .register-link a {
-            color: #27ae60;
-            text-decoration: none;
-            font-weight: bold;
+            background: #c0392b;
         }
 
         .back-button {
             position: fixed;
             top: 2rem;
             left: 2rem;
-            background: #27ae60;
+            background: #e74c3c;
             color: white;
             padding: 0.8rem 1.5rem;
             border-radius: 5px;
@@ -142,7 +129,14 @@
         }
 
         .back-button:hover {
-            background: #219a52;
+            background: #c0392b;
+        }
+
+        .security-notice {
+            text-align: center;
+            margin-top: 1.5rem;
+            font-size: 0.8rem;
+            color: #666;
         }
     </style>
 </head>
@@ -153,33 +147,34 @@
     </a>
     <div class="login-container">
         <div class="login-header">
-            <i class="fas fa-store"></i>
-            <h1>Seller Login</h1>
-            <p>Access your seller dashboard</p>
+            <i class="fas fa-user-shield"></i>
+            <h1>Admin Login</h1>
+            <p>Secure admin access portal</p>
         </div>
         <form>
             <div class="form-group">
-                <label for="seller-id">Seller ID</label>
-                <input type="text" id="seller-id" required placeholder="Enter your seller ID">
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" required placeholder="Enter your email">
+                <label for="admin-id">Admin ID</label>
+                <input type="text" id="admin-id" required placeholder="Enter your admin ID">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" required placeholder="Enter your password">
             </div>
+            <div class="form-group">
+                <label for="security-key">Security Key</label>
+                <input type="password" id="security-key" required placeholder="Enter security key">
+            </div>
             <div class="remember-forgot">
                 <div class="remember-me">
                     <input type="checkbox" id="remember">
-                    <label for="remember">Remember me</label>
+                    <label for="remember">Remember this device</label>
                 </div>
-                <a href="#" class="forgot-password">Forgot Password?</a>
+                <a href="#" class="forgot-password">Reset Access</a>
             </div>
-            <button type="submit" class="login-button">Login</button>
-            <div class="register-link">
-                New seller? <a href="#">Register your business</a>
+            <button type="submit" class="login-button">Secure Login</button>
+            <div class="security-notice">
+                <i class="fas fa-shield-alt"></i>
+                This is a secure admin portal. Unauthorized access is prohibited.
             </div>
         </form>
     </div>
